<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:weightSum="1.0"
        android:background="@color/photoBackground">
        <ImageView
            android:id="@+id/assert_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/take_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/fontColor"
            android:alpha="0.4"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_select"
                android:textSize="9pt"
                android:layout_marginTop="5pt"
                android:layout_marginLeft="5pt"
                android:textColor="#ffff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <Button
                    android:layout_marginLeft="5pt"
                    android:id="@+id/btn_take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    android:background="@null"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:weightSum="1.0"
        android:orientation="vertical">
        <EditText
            android:hint="@string/assert_id"
            android:id="@+id/assert_id_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5pt"/>
        <EditText
            android:hint="@string/assert_value"
            android:id="@+id/assert_value_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="2pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assert_description"/>
        <EditText
            android:id="@+id/assert_description_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="testtesttesttesttesttesttesttesttesttest"
            android:maxEms="120"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_assert_upload"
            android:text="上传"
            android:textColor="@color/fontColor"
            android:background="#AEEEEE"
            android:layout_marginTop="5pt"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>