<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575"
    tools:context="com.example.administrator.watermarking.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view">

    </ScrollView>

    <com.makeramen.roundedimageview.RoundedImageView
        android:backgroundTint="#ffff"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:riv_oval = "true"
        app:riv_corner_radius="10dp"
        android:background="@mipmap/ic_head"
        android:layout_gravity="center_horizontal"
        android:id="@+id/view"
        android:layout_below="@+id/login_progress"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_sign_in"
        style="?android:textAppearanceSmall"
        android:background="#63B8FF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <EditText
        android:id="@+id/Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Account"
        android:textColorHint="#ADADAD"
        android:inputType="textPhonetic"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:textColorHint="#ADADAD"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/Account"
        android:layout_alignParentStart="true" />
</RelativeLayout>