<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.watermarking.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_top_layout"
        android:background="#8B8B7A">

        <com.makeramen.roundedimageview.RoundedImageView
            android:backgroundTint="#fff"
            android:layout_height="30pt"
            android:layout_width="30pt"
            app:riv_oval = "true"
            app:riv_corner_radius="10dp"
            android:id="@+id/main_head"
            android:background="@mipmap/ic_head"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_account"
            android:text="63178576******1234"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp"
            android:textSize="8pt"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300pt"
            android:background="#ffff"
            android:layout_below="@+id/main_account"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="36dp"
                android:id="@+id/main_upload_assert"
                android:clickable="true">
                <TextView
                    android:layout_width="15pt"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="10pt"
                    android:layout_height="10pt"
                    android:background="@mipmap/ic_upload"/>
                <TextView
                    android:layout_width="25pt"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_asset"
                    android:textColor="@color/fontColor"
                    android:textSize="10pt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_assert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_upload_assert"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="34dp"
                android:clickable="true">
                <TextView
                    android:layout_width="15pt"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="10pt"
                    android:layout_height="10pt"
                    android:background="@mipmap/ic_assets"/>
                <TextView
                    android:layout_width="25pt"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_asset"
                    android:textColor="@color/fontColor"
                    android:textSize="10pt"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:id="@+id/main_history"
                android:layout_centerVertical="true"
                android:clickable="true">
                <TextView
                    android:layout_width="15pt"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="10pt"
                    android:layout_height="10pt"
                    android:background="@mipmap/ic_history"/>
                <TextView
                    android:layout_width="25pt"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="@color/fontColor"
                    android:textSize="10pt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/main_write_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_history"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="33dp"
                android:clickable="true">
                <TextView
                    android:layout_width="15pt"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="10pt"
                    android:layout_height="10pt"
                    android:background="@mipmap/ic_writeoff"/>
                <TextView
                    android:layout_width="25pt"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_write_off"
                    android:textColor="@color/fontColor"
                    android:textSize="10pt"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
